<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_home_black"
        android:title="@string/title_order"/>

    <item
        android:id="@+id/navigation_reward"
        android:icon="@drawable/ic_home_black"
        android:title="@string/title_reward"/>

    <item
        android:id="@+id/navigation_voucher"
        android:icon="@drawable/ic_home_black"
        android:title="@string/title_voucher"/>

    <item
        android:id="@+id/navigation_other"
        android:icon="@drawable/ic_home_black"
        android:title="@string/title_other"/>
</menu>